--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://christopheducamp.com/"
 languageCode = "fr"
-title = "100 days of code"
+title = "sur la route de l'indieweb"
 author = "christophe ducamp"
 DefaultContentLanguage = "fr"
 copyright = "Creative Commons Attribution 4.0 International License"
@@ -32,7 +32,7 @@ disqusShortname = "xtof"
   authorurl = "https://christopheducamp.com"
   author    = "xtof"
   handle    = "xtof_party"
-  subtitle  = "100daysofcode"
+  subtitle  = "sur la route de l'indieweb"
   summary   = "sur la route de l'indieweb"
   keywords  = "indieweb, web"
   description = "sur la route de l'indieweb"
