--- a/config.toml
+++ b/config.toml
@@ -42,6 +42,7 @@ disqusShortname = "xtof"
   github    = "https://github.com/ChristopheDucamp/"
   gitlab    = "https://gitlab.com/ChristopheDucamp/"
   microblog = "https://micro.blog/xtof"
+  instagram = "https://instagram.com/xtof_fr"
   email     = "christophe@ducamp.me"
   keybase   = "https://keybase.io/christopheducamp"
   #licenseURL  = "/mentions-legales/"
