www on instagram link

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ pygmentCodeFences = true
   github    = "https://github.com/ChristopheDucamp/"
   gitlab    = "https://gitlab.com/ChristopheDucamp/"
   microblog = "https://micro.blog/xtof"
-  instagram = "https://instagram.com/xtof_fr"
+  instagram = "https://www.instagram.com/xtof_fr"
   email     = "christophe@ducamp.me"
   keybase   = "https://keybase.io/christopheducamp"
   #licenseURL  = "/mentions-legales/"
