--- a/config.toml
+++ b/config.toml
@@ -43,6 +43,7 @@ pygmentCodeFences = true
   gitlab    = "https://gitlab.com/ChristopheDucamp/"
   microblog = "https://micro.blog/xtof"
   instagram = "https://www.instagram.com/xtof_fr"
+  mastodon = "https://indieweb.me/xtof"
   email     = "christophe@ducamp.me"
   keybase   = "https://keybase.io/christopheducamp"
   #licenseURL  = "/mentions-legales/"
