creative commons licence 3.0

--- a/config.toml
+++ b/config.toml
@@ -30,8 +30,8 @@ pygmentCodeFences = true
 [params]
   name = "christophe ducamp"
   authorurl = "https://christopheducamp.com"
-  author    = "xtof"
-  handle    = "xtof_party"
+  author    = "christophe ducamp"
+  handle    = "xtof"
   subtitle  = "sur la route de l'indieweb"
   summary   = "sur la route de l'indieweb"
   keywords  = "indieweb, web"
@@ -43,7 +43,7 @@ pygmentCodeFences = true
   gitlab    = "https://gitlab.com/ChristopheDucamp/"
   microblog = "https://micro.blog/xtof"
   instagram = "https://www.instagram.com/xtof_fr"
-  mastodon = "https://indieweb.me/xtof"
+  mastodon  = "https://indieweb.me/xtof"
   email     = "christophe@ducamp.me"
   keybase   = "https://keybase.io/christopheducamp"
   #licenseURL  = "/mentions-legales/"
