--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://christopheducamp.com/"
 languageCode = "fr"
-title = "sur la route de l'indieweb"
+title = " I Want to Be a Sailor"
 author = "christophe ducamp"
 DefaultContentLanguage = "fr"
 copyright = "Creative Commons Attribution 4.0 International License"
