Update keywords : grandfather, parenting

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://christopheducamp.com/"
 languageCode = "fr"
-title = " I Wanna Be a Sailor"
+title = "I Wanna Be a Sailor"
 author = "christophe ducamp"
 DefaultContentLanguage = "fr"
 copyright = "Creative Commons Attribution 4.0 International License"
@@ -32,9 +32,9 @@ pygmentCodeFences = true
   authorurl = "https://christopheducamp.com"
   author    = "christophe ducamp"
   handle    = "xtof"
-  subtitle  = "sur la route de l'indieweb"
-  summary   = "sur la route de l'indieweb"
-  keywords  = "indieweb, web"
+  subtitle  = "Sur la route de l'indieweb"
+  summary   = "I Wanna Be a Sailor"
+  keywords  = "sailing, sailor, writing, parenting, grandfather, mental health, working in music, indieweb, web"
   description = "sur la route de l'indieweb"
   logo      = "/img/logo.jpg"
   twitter   = "https://twitter.com/xtof_party"
