--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ pygmentCodeFences = true
   subtitle  = "Sur la route de l'indieweb"
   summary   = "I Wanna Be a Sailor"
   keywords  = "sailing, sailor, writing, parenting, grandfather, mental health, working in music, indieweb, web"
-  description = "sur la route de l'indieweb"
+  description = "indieweb roadmap"
   logo      = "/img/logo.jpg"
   twitter   = "https://twitter.com/xtof_party"
   facebook  = "https://www.facebook.com/christophe.ducamp"
